<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tetris</string>
    <string name="action_settings">Settings</string>
    <string name="action_backtomain">Back</string>
    <string name="action_about">About</string>
    <string name="action_donate">Donate</string>
    <string name="action_help">Help</string>
    <string name="startButtonString">New Game</string>
    <string name="resumeButtonString">Resume Game</string>
    <string name="quitButtonString">Exit</string>
    <string name="pausebutton">Pause</string>
    <string name="holdbuttonstring">Hold</string>
    <string name="playerNameInputFieldHint">Player name:</string>
    <string name="highscoreListDescription">Highscores</string>
    <string name="startLevelDialogTitle">Starting Level</string>
    <string name="startLevelDialogCancel">Cancel</string>
    <string name="startLevelDialogStart">Start</string>
    <string name="title_activity_game">Tetris</string>
    <string name="title_activity_help">Help</string>
    <string name="score_title">Score</string>
    <string name="level_title">Level</string>
    <string name="time_title">Time</string>
    <string name="apm_title">APM</string>
    <string name="fps_title">FPS</string>
    <string name="defeatDialogTitle">Game Over</string>
    <string name="defeatDialogReturn">Back</string>
    <string name="tab">\u0009</string>
    <string name="anonymous">Anonymous</string>
    <string name="scoreLabel">Score:</string>
    <string name="timeLabel">Time:</string>
    <string name="apmLabel">Total APM:</string>
    <string name="hint">"Hint:
•Tetris is playable in both screen orientations.
•Turn off Silent mode to enable sounds."</string>
    <string name="highscore_title">Highscores</string>
    <string name="musicAuthorNote">music by GoodLyrics Vibes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_donate">Donate</string>
    <string name="pref_phantom_summary">Shows the drop location of the active piece</string>
    <string name="pref_phantom_title">Phantom</string>
    <string name="pref_fps_summary">The current Frames per Second will be shown below APM</string>
    <string name="pref_fps_title">Show FPS</string>
    <string name="pref_popup_summary">For successful line clears</string>
    <string name="pref_popup_title">Pop-Up Text</string>
    <string name="pref_rng_title">Piece Generation</string>
    <string name="pref_rngs_default">sevenbag</string>
    <string name="pref_rng_summary">Choose how the sequence of pieces is generated. 7-Bag-Randomization is highly recommended and is also used in competitive Tetris</string>
    <string name="softdropspeed_pref_title">Soft Drop Speed</string>
    <string name="movespeed_pref_title">Horizontal Speed</string>
    <string name="soundvolume_pref_title">Effects Volume</string>
    <string name="musicvolume_pref_title">Music Volume</string>
    <string name="pref_vibration_button_title">Button Vibration</string>
    <string name="pref_vibration_button_summary">Vibrates shortly when pressing the game buttons</string>
    <string name="pref_vibration_events_title">Event Vibration</string>
    <string name="pref_vibration_events_summary">Vibrates on important game events</string>
    <string name="pref_button_sound_summary">Provides auditory feedback when pressing the game buttons</string>
    <string name="pref_button_sound_title">Button Sound</string>
    <string name="pref_fpslimit_summary">Significantly lowers power consumption but may slow down the game</string>
    <string name="pref_fpslimit_title">Limit FPS</string>
    <string name="pref_fpslimittext_summary">The game tries to maintain this frame rate as closely as possible</string>
    <string name="pref_fpslimittext_title">Target FPS</string>
    <string name="pref_fpslimittext_default">30</string>
    <string name="pref_vibDurOffset_summary">"Increase this time to compensate for the delay of your phone's vibrator. The duration of button vibrations should be adjusted to be just barely noticeable.
Time in milliseconds"</string>
    <string name="pref_vibDurOffset_title">Button Vibration Duration</string>
    <string name="pref_vibDurOffset_default">15</string>
    <string name="pref_antialiasing_summary">Improves the display quality of text. Disable this for better performance</string>
    <string name="pref_antialiasing_title">Text Anti-Aliasing</string>
    <string name="pref_accelerationH_summary">Short delay after the initial move. Useful for beginners</string>
    <string name="pref_accelerationH_title">Horizontal Acceleration</string>
    <string name="pref_accelerationV_summary">Short delay after the initial move. Useful for beginners</string>
    <string name="pref_accelerationV_title">Soft Drop Acceleration</string>
    <string name="pref_version_summary">"1.8
Touch here to view the public repository of this project."</string>
    <string name="pref_version_title">Version</string>
    <string name="repository_url">https://github.com/Jhunrel25/Tetris-by-JEgamez</string>
    <string name="pref_license_summary">"Tetris™ by JEgamez is free software: licensed under the GNU General Public License (GPLv3) as published by the Free Software Foundation.
Touch here to view this license online."</string>
    <string name="pref_license_title">License Information</string>
    <string name="license_url">http://www.gnu.org/licenses/gpl-3.0</string>
    <string name="pref_license_music_summary">"\"OPM Chill Songs\" by GoodLyrics Vibes. Licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Philippines license (CC BY-NC-SA 3.0 DE).
Touch here to visit the artist's YouTube channel."</string>
    <string name="pref_license_music_title">Music Attribution</string>
    <string name="music_url">https://youtube.com/channel/UCDWhwv9kixsM5ZkNW-4ISyw</string>
    <string name="pref_author_summary">"Jhunrel Evangelista
Touch here to contact the developer for suggestions, feedback or anything related to this project."</string>
    <string name="pref_author_title">Project Developer</string>
    <string name="pref_author_url">evangelistajhunrel@gmail.com</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_donate_summary">If you are grateful for this Software and would like to let the Developer benefit as well, you can place a Donation as you like.</string>
    <string name="donation_url">https://www.paypal.com/donate?hosted_button_id=UFXBNLADVELQY</string>
    <string name="donate_button">Go to Paypal</string>
    <string name="pref_category_sound">SOUND</string>
    <string name="pref_category_vibration">VIBRATION</string>
    <string name="pref_category_other">OTHER</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_help_scoring_title">Scoring</string>
    <string name="pref_help_scoring_summary">How does the scoring work?</string>
    <string name="pref_help_scoring_message">"Basic points per cleared line are:

100 points for 1 line,
300 points for 2 lines,
500 points for 3 lines,
800 points for 4 lines (called \"Tetris\").

Scoring consecutive Tetrises provides 400 bonus points per Tetris.
Additionally, the player receives a bonus score for using Soft and Hard Drops. Soft Drops award 1 point per dropped line, while Hard Drops award 2 points per dropped line."</string>
    <string name="pref_help_levels_title">Levels</string>
    <string name="pref_help_levels_summary">What do Levels mean?</string>
    <string name="pref_help_levels_message">"Levels are a measurement of difficulty.
The speed at which pieces automatically drop down increases by 10% per level.
The current level increases after clearing 10 additional lines."</string>
    <string name="pref_help_vibration_title">Vibration</string>
    <string name="pref_help_vibration_summary">How to achieve an optimal haptic feedback with vibration.</string>
    <string name="pref_help_vibration_message">"There are some problems with the vibration functionality that can occur on a few devices.
Also, most tablet devices don't support Vibration at all.
If your device does support vibration but you don't notice the button vibrations, you can increase the vibration duration. This setting is called \"Button Vibration Duration\" and can be found over advanced settings.
The duration of button vibrations should be adjusted to be just barely noticeable."</string>
    <string name="pref_help_apm_title">APM</string>
    <string name="pref_help_apm_summary">What does APM mean?</string>
    <string name="pref_help_apm_message">"APM means \"Actions Per Minute\".
This is a measurement of the player's finger speed."</string>
    <string name="pref_help_fps_title">FPS</string>
    <string name="pref_help_fps_summary">What does FPS mean? What is it useful for?</string>
    <string name="pref_help_fps_message">"FPS means \"Frames Per Second\".
This measures the frequency of display updates. Low FPS can be notices by slow reactions from the game and choppy displaying. High FPS on the other hand consume more power. A good trade-off between display smoothness and power consumption can be achieved between 25 and 35 FPS.
FPS can be limited in advanced settings."</string>
    <string name="pref_help_randomizer_title">Randomizer</string>
    <string name="pref_help_randomizer_summary">What is the difference between the two randomizer modes? (advanced settings)</string>
    <string name="pref_help_randomizer_message">"7-Bag-Randomization:
Generates randomly permutated sequences of all 7 pieces. This means, that the player can never encounter 3 identical pieces in a row.

Plain Random:
The next piece will be independently generated at random."</string>
    <string name="pref_help_resumability_title">Resumability</string>
    <string name="pref_help_resumability_summary">Under which conditions is an interrupted game resumable?</string>
    <string name="pref_help_resumability_message">"The game is resumable from the main screen, if the \"Pause\" button or the native android \"Back\" button was hit.
The game is also resumable, if the player switches to another application or the home screen and doesn't exit the software.
The game will not be resumable, if the \"Exit\" menu entry was hit from the main screen."</string>
</resources>
