<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com">
    <ListPreference
        android:entries="@array/randomizer_preference_array"
        android:title="@string/pref_rng_title"
        android:key="pref_rng"
        android:defaultValue="@string/pref_rngs_default"
        android:dialogTitle="@string/pref_rng_title"
        android:entryValues="@array/randomizer_preference_values" />
    <github.jhunrel25.tetris.SeekBarPreference
        android:max="30"
        android:title="@string/softdropspeed_pref_title"
        android:key="pref_softdropspeed"
        android:defaultValue="10"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight=" Lines per Second" />
    <CheckBoxPreference
        android:title="@string/pref_accelerationV_title"
        android:key="pref_accelerationV"
        android:summary="@string/pref_accelerationV_summary"
        android:defaultValue="true" />
    <github.jhunrel25.tetris.SeekBarPreference
        android:max="20"
        android:title="@string/movespeed_pref_title"
        android:key="pref_movespeed"
        android:defaultValue="10"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight=" Squares per Second" />
    <CheckBoxPreference
        android:title="@string/pref_accelerationH_title"
        android:key="pref_accelerationH"
        android:summary="@string/pref_accelerationH_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:title="@string/pref_fps_title"
        android:key="pref_fps"
        android:summary="@string/pref_fps_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:title="@string/pref_fpslimit_title"
        android:key="pref_fpslimit"
        android:summary="@string/pref_fpslimit_summary"
        android:defaultValue="false" />
    <EditTextPreference
        android:numeric="integer"
        android:title="@string/pref_fpslimittext_title"
        android:key="pref_fpslimittext"
        android:dependency="pref_fpslimit"
        android:defaultValue="@string/pref_fpslimittext_default"
        android:dialogTitle="@string/pref_fpslimittext_title"
        android:dialogMessage="@string/pref_fpslimittext_summary"
        android:positiveButtonText="OK"
        android:negativeButtonText="Cancel" />
    <CheckBoxPreference
        android:title="@string/pref_antialiasing_title"
        android:key="pref_antialiasing"
        android:summary="@string/pref_antialiasing_summary"
        android:defaultValue="true" />
</PreferenceScreen>