<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com">
    <CheckBoxPreference
        android:title="@string/pref_phantom_title"
        android:key="pref_phantom"
        android:summary="@string/pref_phantom_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:title="@string/pref_popup_title"
        android:key="pref_popup"
        android:summary="@string/pref_popup_summary"
        android:defaultValue="true" />
    <PreferenceCategory
        android:title="@string/pref_category_sound"
        android:key="sound_settings">
        <github.jhunrel25.tetris.SeekBarPreference
            android:max="100"
            android:title="@string/soundvolume_pref_title"
            android:key="pref_soundvolume"
            android:defaultValue="100"
            robobunny:min="0"
            robobunny:unitsLeft=""
            robobunny:unitsRight=" %" />
        <CheckBoxPreference
            android:title="@string/pref_button_sound_title"
            android:key="pref_button_sound"
            android:defaultValue="true" />
        <github.jhunrel25.tetris.SeekBarPreference
            android:max="100"
            android:title="@string/musicvolume_pref_title"
            android:key="pref_musicvolume"
            android:defaultValue="100"
            robobunny:min="0"
            robobunny:unitsLeft=""
            robobunny:unitsRight=" %" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_vibration"
        android:key="vibration_settings">
        <CheckBoxPreference
            android:title="@string/pref_vibration_button_title"
            android:key="pref_vibration_button"
            android:summary="@string/pref_vibration_button_summary"
            android:defaultValue="false" />
        <EditTextPreference
            android:numeric="integer"
            android:title="@string/pref_vibDurOffset_title"
            android:key="pref_vibDurOffset"
            android:defaultValue="@string/pref_vibDurOffset_default"
            android:dialogTitle="@string/pref_vibDurOffset_title"
            android:dialogMessage="@string/pref_vibDurOffset_summary"
            android:positiveButtonText="OK"
            android:negativeButtonText="Cancel" />
        <CheckBoxPreference
            android:title="@string/pref_vibration_events_title"
            android:key="pref_vibration_events"
            android:summary="@string/pref_vibration_events_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_other"
        android:key="other_settings">
        <Preference
            android:icon="@drawable/settings_jegamez"
            android:title="@string/pref_category_advanced"
            android:key="pref_advanced" />
    </PreferenceCategory>
</PreferenceScreen>