<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="right"
    android:orientation="vertical"
    android:id="@id/LinearLayout2"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:id="@id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.8">
        <TextView
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscore_title" />
        <View
            android:id="@id/titledivider"
            android:layout_width="fill_parent"
            android:layout_height="8.0dip" />
        <View
            android:id="@id/scoredivider"
            android:background="@color/holo_grey"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:contentDescription="@string/highscoreListDescription" />
        <View
            android:id="@id/hdivider"
            android:background="@color/holo_grey"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
        <EditText
            android:id="@id/nicknameEditView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playerNameInputFieldHint"
            android:ems="10"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:imeOptions="actionDone" />
    </LinearLayout>
    <View
        android:id="@id/spacer0"
        android:layout_width="wrap_content"
        android:layout_height="5.0dip" />
    <LinearLayout
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:enabled="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/holo_grey"
            android:textColorHint="@color/holo_grey"
            android:layout_gravity="center|top"
            android:id="@id/resumeButton"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:text="@string/resumeButtonString"
            android:layout_weight="1.0"
            android:onClick="onClickResume"
            style="@android:style/Widget.ImageWell" />
        <View
            android:id="@id/spacer2"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.25" />
        <Button
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/square_error"
            android:textColorHint="@color/holo_grey"
            android:id="@id/restartButton"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:text="@string/startButtonString"
            android:layout_weight="1.0"
            android:onClick="onClickStart"
            style="@android:style/Widget.ImageWell" />
    </LinearLayout>
    <TextView
        android:textAppearance="?android:textAppearanceSmall"
        android:id="@id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicAuthorNote" />
</LinearLayout>